RVTL/src/main/resources/R/inst/vtlStudio2/www/vtl-editor.css
.antlr-editor {
  position: relative;
  height: 70vh;
  resize: vertical;
}

.CodeMirror {
  height: 100%;
}

.vtltoolbar, 
.vtltoolbar > * {
  height: 25px;
  margin: 0;
  box-sizing: border-box;
}

.vtlLogo {
  max-height: 20%;
  max-width: 20%;
}

.tab-content, 
.content, 
.content > div {
  padding: 0 !important;
}

.nav-tabs {
  height: 45px;
}

.tab-pane {
  height: calc(100vh - 45px);
}

.tab-content .tab-pane.active:first-child {
  display: flex;
  flex-direction: column;
}

.tab-content .tab-pane:not(:first-child) {
  margin: 10px;
}

#vtl_output {
  border-radius: 0;
  padding: 0;
  margin: 0;
  flex-shrink: 1;
  flex-grow: 1;
}

#saveas {
  margin: 6px 5px 6px 15px;
  color: #444;
}

.tab-disabled {
  pointer-events: none;
  opacity: 0.6;
}

